force-app/main/default/objects/Distribution_Group__c/Distribution_Group__c.object-meta.xml
<CustomObject>
    <label>Distribution Group</label>
    <nameField>
        <label>Distribution Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distribution Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>