force-app/main/default/objects/Distribution_Group__c/fields/CampaignId__c.field-meta.xml
<CustomField>
    <fullName>CampaignId__c</fullName>
    <description>Create a Campaign Influence with this Campaign Id</description>
    <label>CampaignId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>