force-app/main/default/objects/Distribution_Group__c/fields/Customer_Setting__c.field-meta.xml
<CustomField>
    <fullName>Customer_Setting__c</fullName>
    <label>Customer Setting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospects Only</fullName>
            </value>
            <value>
                <fullName>Customers Only</fullName>
            </value>
            <value>
                <fullName>Prospects and Customers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>