force-app/main/default/objects/Distribution_Group__c/fields/Distribution_Type__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Type__c</fullName>
    <label>Distribution Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Linear</fullName>
                <default>true</default>
                <label>Linear</label>
            </value>
            <value>
                <fullName>Load Balanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>