force-app/main/default/objects/Distribution_Group__c/fields/Field_to_Distribute__c.field-meta.xml
<CustomField>
    <fullName>Field_to_Distribute__c</fullName>
    <label>Field to Distribute</label>
    <length>80</length>
    <type>Text</type>
</CustomField>