force-app/main/default/objects/Distribution_Group__c/fields/HasNextUser__c.field-meta.xml
<CustomField>
    <fullName>HasNextUser__c</fullName>
    <label>HasNextUser</label>
    <summaryFilterItems>
        <field>Distribution_Group_Member__c.Next_Up__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Distribution_Group_Member__c.Distribution_Group__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>