force-app/main/default/objects/Distribution_Group__c/fields/Major_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Major_Accounts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Distribution Groups that contain only one Major Account rep.  Also, changes the Opportunity Record Type to Enterprise New Practice Business.</description>
    <label>Major Accounts</label>
    <type>Checkbox</type>
</CustomField>