force-app/main/default/objects/Distribution_Group__c/fields/Open_Opportunity_Setting__c.field-meta.xml
<CustomField>
    <fullName>Open_Opportunity_Setting__c</fullName>
    <label>Open Opportunity Setting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Notify Owner</fullName>
                <default>true</default>
                <label>Notify Owner</label>
            </value>
            <value>
                <fullName>Reassign Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>