force-app/main/default/objects/Distribution_Group__c/fields/Relationship_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Criteria__c</fullName>
    <inlineHelpText>SOQL WHERE clause applied when querying Object records, e.g. Amount &gt; 200</inlineHelpText>
    <label>Relationship Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>