force-app/main/default/objects/Distribution_Group__c/fields/Relationship_Criteria_Fields__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Criteria_Fields__c</fullName>
    <inlineHelpText>If you have specified a relationship criteria, you must confirm the fields referenced by it here on separate lines, for example for criteria StageName = &#39;Won&#39; list StageName in this field.</inlineHelpText>
    <label>Relationship Criteria Fields</label>
    <type>TextArea</type>
</CustomField>