force-app/main/default/objects/Distribution_Group__c/fields/Timed_Distribution_Group_Hours__c.field-meta.xml
<CustomField>
    <fullName>Timed_Distribution_Group_Hours__c</fullName>
    <description>Time-based Distribution Groups are groups that only allow an Account to pass through once every X hours. The Distribution Group assignment will be blocked by an Apex validation in ContactsService that compares this field with the Timed Distribution Group Date on the Account object.</description>
    <label>Timed Distribution Group Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>