force-app/main/default/objects/Distribution_Group__c/fields/Total_Members__c.field-meta.xml
<CustomField>
    <fullName>Total_Members__c</fullName>
    <label>Total Members</label>
    <summaryForeignKey>Distribution_Group_Member__c.Distribution_Group__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>