force-app/main/default/objects/Distribution_Group__c/validationRules/Parent_Object_needed_for_Load_Balanced.validationRule-meta.xml
<ValidationRule>
    <fullName>Parent_Object_needed_for_Load_Balanced</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( ParentObject__c ) &amp;&amp;
ISPICKVAL( Distribution_Type__c , &#39;Load Balanced&#39;)</errorConditionFormula>
    <errorDisplayField>ParentObject__c</errorDisplayField>
    <errorMessage>You need to have a Parent Object to Balance. Please work with someone on the System Ops team</errorMessage>
</ValidationRule>